@startuml confirm_vehicle_return_usecase

title Class Diagram - Confirm Vehicle Return Use Case (Rentzy)

class HandoverRoute {
  + POST /api/handover/confirm-owner-return
  + POST /api/handover/confirm-renter-return
  + confirmOwnerReturn()
  + confirmRenterReturn()
}

class verifyJWTToken {
  + verify(request, response, next)
}

class HandoverController {
  + confirmOwnerReturn(request, response)
  + confirmRenterReturn(request, response)
  - uploadReturnImages()
  - updateReturnStatus()
  - updateBookingStatus()
  - calculatePointsReward()
  - createBookingPayout()
  - sendNotifications()
}

class Booking {
  + booking_id: BIGINT <<PK>>
  + renter_id: BIGINT <<FK>>
  + vehicle_id: BIGINT <<FK>>
  + total_amount: DECIMAL
  + status: ENUM
  + findByPk(bookingId: BIGINT): Booking
  + update(data): Boolean
}

class BookingHandover {
  + handover_id: BIGINT <<PK>>
  + booking_id: BIGINT <<FK>>
  + owner_return_confirmed: BOOLEAN
  + renter_return_confirmed: BOOLEAN
  + return_time: DATE
  + post_rental_images: JSON
  + findOne(options): BookingHandover
  + update(data): Boolean
}

class Vehicle {
  + vehicle_id: BIGINT <<PK>>
  + owner_id: BIGINT <<FK>>
  + license_plate: STRING
  + rent_count: INTEGER
  + findByPk(vehicleId: BIGINT): Vehicle
  + update(data): Boolean
}

class User {
  + user_id: BIGINT <<PK>>
  + full_name: STRING
  + email: STRING
  + points: INTEGER
  + role: ENUM
  + findByPk(userId: BIGINT): User
  + update(data): Boolean
}

class PointsTransaction {
  + transaction_id: BIGINT <<PK>>
  + user_id: BIGINT <<FK>>
  + transaction_type: ENUM
  + points_amount: INTEGER
  + balance_after: INTEGER
  + reference_type: ENUM
  + reference_id: BIGINT
  + description: STRING
  + create(data): PointsTransaction
}

class BookingPayout {
  + payout_id: BIGINT <<PK>>
  + booking_id: BIGINT <<FK>>
  + total_rental_amount: DECIMAL
  + platform_commission_rate: DECIMAL
  + payout_status: ENUM
  + payout_method: ENUM
  + create(data): BookingPayout
}

class Notification {
  + notification_id: BIGINT <<PK>>
  + user_id: BIGINT <<FK>>
  + title: STRING
  + message: STRING
  + type: ENUM
  + create(notificationData): Notification
}

HandoverRoute --> verifyJWTToken : uses
HandoverRoute --> HandoverController : calls
HandoverController --> Booking : queries/updates
HandoverController --> BookingHandover : queries/updates
HandoverController --> Vehicle : queries/updates
HandoverController --> User : queries/updates
HandoverController --> PointsTransaction : creates
HandoverController --> BookingPayout : creates
HandoverController --> Notification : creates

Booking ||--|| BookingHandover : "has one"
Booking ||--|| BookingPayout : "has one"
Booking }o--|| Vehicle : "books"
Booking }o--|| User : "made by"
Vehicle }o--|| User : "owned by"
User ||--o{ PointsTransaction : "has many"
User ||--o{ Notification : "receives"

@enduml